--- a/index.html
+++ b/index.html
@@ -1877,7 +1877,7 @@ window.initMap = function () {
             center: {lat: -23.5505, lng: -46.6333},
             zoom: 17,
             mapId: MAP_ID,
-            mapTypeId: google.maps.MapTypeId.ROADMAP, // 🚀 Iniciar com ROADMAP (mais rápido)
+            mapTypeId: google.maps.MapTypeId.TERRAIN, // ⚠️ Iniciar com RELEVO (mais lento que ROADMAP)
             tilt: 0,
             heading: 0,
             gestureHandling: "greedy",
@@ -1889,7 +1889,7 @@ window.initMap = function () {
             mapTypeControlOptions: {
                 style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR,
                 position: google.maps.ControlPosition.TOP_RIGHT,
-                mapTypeIds: ['roadmap', 'satellite', 'hybrid'] // Sem TERRAIN para melhor performance
+                mapTypeIds: ['roadmap', 'satellite', 'terrain', 'hybrid'] // Todos os tipos disponíveis
             },
             scaleControl: false, // Desabilitar escala
             // Otimizações de renderização
