--- a/index.html
+++ b/index.html
@@ -1877,7 +1877,7 @@ window.initMap = function () {
             center: {lat: -23.5505, lng: -46.6333},
             zoom: 17,
             mapId: MAP_ID,
-            mapTypeId: google.maps.MapTypeId.TERRAIN, // ⚠️ Iniciar com RELEVO (mais lento que ROADMAP)
+            mapTypeId: google.maps.MapTypeId.ROADMAP, // 🚀 FORÇAR iniciar em modo padrão (mais leve)
             tilt: 0,
             heading: 0,
             gestureHandling: "greedy",
