--- a/index.html
+++ b/index.html
@@ -1889,7 +1889,7 @@ window.initMap = function () {
             mapTypeControlOptions: {
                 style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR,
                 position: google.maps.ControlPosition.TOP_RIGHT,
-                mapTypeIds: ['roadmap', 'satellite', 'hybrid'] // Sem TERRAIN para melhor performance
+                mapTypeIds: ['roadmap', 'satellite', 'terrain', 'hybrid'] // Todas as opções disponíveis
             },
             scaleControl: false, // Desabilitar escala
             // Otimizações de renderização
